2013-02-20  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (main):
	* lib/fludownloader.c: (_write_function):
	* lib/fludownloader.h:
	  - Allow tasks to be aborted from the callback. Update example.

2013-02-20  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_write_function), (_is_task_running),
	(_remove_task), (_abort_task), (_process_curl_messages),
	(_thread_function), (fludownloader_destroy),
	(fludownloader_new_task), (fludownloader_abort_task),
	(fludownloader_abort_all_tasks):
	* lib/fludownloader.h:
	  - Allow the current downloading task to be aborted immediately.
	    This makes libCurl start a new TCP stream, but it is still faster than
	    waiting for the current task to complete, if it is a big file.

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (fludownloader_init),
	(fludownloader_shutdown):
	  - Add global init/cleanup of libCurl. Init was done automatically before,
	    but it is nicer to call it explicitly.

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	* lib/fludownloader.c: (_process_curl_messages),
	(fludownloader_new_task), (fludownloader_abort_task),
	(fludownloader_abort_all_tasks),
	(fludownloader_abort_all_pending_tasks):
	* lib/fludownloader.h:
	  - Add API to abort all PENDING tasks (allowing the current one to finish)
	  - Update example.
	  - Add safety checks on input parameters

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	  - Having fun with autotools.

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	* lib/fludownloader.c: (fludownloader_new_task):
	* lib/fludownloader.h:
	  - Support for range requests. Update example.

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* Makefile.am:
	* configure.ac:
	  - Deploy pc and header files.

2013-02-18  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):